gcc/testsuite/gcc.dg/Wimplicit-function-declaration-c99-pedantic.c
/* { dg-do compile } */
/* { dg-options "-std=c99 -pedantic-errors -Wall" } */

void f(void) 
{ 
  puts("Hello"); /* { dg-error "implicit declaration of function" } */
}
